fix: Added scroll to top on Product page loading. Fixed word break in description sections. Removed inline styles.

--- a/src/components/Product/ProductComments/ProductComments.module.scss
+++ b/src/components/Product/ProductComments/ProductComments.module.scss
@@ -65,7 +65,7 @@
   font-size: 14px;
   font-style: italic;
 
-  word-break: break-all;
+  word-break: break-word;
 }
 
 @include tablet {
